<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="16sp"
            android:textColor="@android:color/holo_blue_light"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/commentText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/interpretation_text_goes_here"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datetime"
            android:textSize="12sp"
            android:textColor="@android:color/darker_gray"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/commentText"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/likeIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@android:drawable/btn_star"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/commentText"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="0"
            app:layout_constraintEnd_toStartOf="@+id/likeIcon"
            app:layout_constraintTop_toBottomOf="@+id/commentText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
